--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,14 +10,20 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication">
+
         <activity
-            android:name="com.webview.myapplication.MainActivity"
-            android:configChanges="orientation|screenSize"
+            android:name="com.webview.myapplication.SplashActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+
+        <activity
+            android:name="com.webview.myapplication.MainActivity"
+            android:configChanges="orientation|screenSize" />
+
     </application>
 </manifest>
