--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,9 +24,18 @@ jobs:
 
       - name: Build Debug APK
         run: ./gradlew :app:assembleDebug
+        
+      - name: Build Release AAB
+         run: ./gradlew :app:bundleRelease
 
       - name: Upload APK artifact
         uses: actions/upload-artifact@v4
         with:
           name: app-debug-apk
           path: app/build/outputs/apk/debug/*.apk
+      - name: Upload AAB
+         uses: actions/upload-artifact@v4
+         with:
+              name: playstore-aab
+              path: app/build/outputs/bundle/release/app-release.aab
+
