--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Build Android APK
+name: Build Android APK & AAB
 
 on:
   push:
@@ -24,18 +24,18 @@ jobs:
 
       - name: Build Debug APK
         run: ./gradlew :app:assembleDebug
-        
-      - name: Build Release AAB
-         run: ./gradlew :app:bundleRelease
 
-      - name: Upload APK artifact
+      - name: Build Release AAB
+        run: ./gradlew :app:bundleRelease
+
+      - name: Upload Debug APK
         uses: actions/upload-artifact@v4
         with:
           name: app-debug-apk
           path: app/build/outputs/apk/debug/*.apk
-      - name: Upload AAB
-         uses: actions/upload-artifact@v4
-         with:
-              name: playstore-aab
-              path: app/build/outputs/bundle/release/app-release.aab
 
+      - name: Upload Play Store AAB
+        uses: actions/upload-artifact@v4
+        with:
+          name: playstore-aab
+          path: app/build/outputs/bundle/release/app-release.aab
