--- a/build.gradle
+++ b/build.gradle
@@ -4,12 +4,13 @@ buildscript {
         google()
         mavenCentral()
     }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:8.3.0'
+   dependencies {
+    classpath 'com.android.tools.build:gradle:8.3.0'
 
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
-    }
+    // 🔥 REQUIRED FOR FIREBASE
+    classpath 'com.google.gms:google-services:4.4.0'
+}
+
 }
 
 allprojects {
